--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://nicolasdeffense.github.io/" class="btn">Home</a>
-      <a href="https://nicolasdeffense.github.io/eo-toolbox/notebooks.html" class="btn">Notebook</a>
+      <!--<a href="https://nicolasdeffense.github.io/" class="btn">Home</a>-->
+      <a href="https://uclouvain.be/cours-2021-lbrat2104" class="btn">Objectives</a>
       <a href="https://nicolasdeffense.github.io/eo-toolbox/installation.html" class="btn">Installation</a>
     </header>
 
