cheat sheets page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
       <!--<a href="https://nicolasdeffense.github.io/" class="btn">Home</a>-->
       <a href="https://uclouvain.be/cours-2021-lbrat2104" class="btn">Objectives</a>
       <a href="https://nicolasdeffense.github.io/eo-toolbox/installation.html" class="btn">Installation</a>
+      <a href="https://nicolasdeffense.github.io/eo-toolbox/cheat_sheets.html" class="btn">Cheat Sheets</a>
     </header>
 
     <main id="content" class="main-content" role="main">
