--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link href="/assets/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="/eo-toolbox/assets/css/all.css">
     {% include head-custom.html %}
   </head>
   
