--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <!--<a href="https://nicolasdeffense.github.io/" class="btn">Home</a>-->
       <a href="https://uclouvain.be/cours-2021-lbrat2104" class="btn">Objectives</a>
-      <a href="https://nicolasdeffense.github.io/eo-toolbox/installation.html" class="btn">Installation</a>
+      <a href="https://nicolasdeffense.github.io/eo-toolbox/jupyter_lab.html" class="btn">JupyterLab</a>
+      <a href="https://nicolasdeffense.github.io/eo-toolbox/google_earth_engine.html" class="btn">Google Earth Engine</a>
       <a href="https://nicolasdeffense.github.io/eo-toolbox/cheat_sheets.html" class="btn">Cheat Sheets</a>
     </header>
 
